<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Parts - Homepage -->
    <string name="advanced_settings">Poco Parts</string>
    <string name="advanced_settings_summary">Device Specific Customisations</string>

    <!-- Display -->
    <string name="display_title">Display</string>

    <!-- Display - FPS Info -->
    <string name="fps_title">FPS Info</string>
    <string name="fps_info_title">FPS Overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    <string name="fps_info_color_title">Text Color</string>
    <string name="fps_info_color_green">Green</string>
    <string name="fps_info_color_red">Red</string>
    <string name="fps_info_color_blue">Blue</string>
    <string name="fps_info_color_yellow">Yellow</string>
    <string name="fps_info_color_black">Black</string>
    <string name="fps_info_color_accent">Follow System</string>
    <string name="fps_info_position_title">Overlay Position</string>
    <string name="fps_info_position_top_left">Top left</string>
    <string name="fps_info_position_top_center">Top center</string>
    <string name="fps_info_position_top_right">Top right</string>
    <string name="fps_info_position_bottom_left">Bottom left</string>
    <string name="fps_info_position_bottom_center">Bottom center</string>
    <string name="fps_info_position_bottom_right">Bottom right</string>
    <string name="fps_info_text_size_title">Text Size</string>
           
    <!-- Display - Ambient Display -->
    <string name="ambient_display_xiaomi">Poco Doze</string>
    <string name="advanced_doze_summary">Ambient display</string>
    
    <!-- Display - High Touch -->
    <string name="htsr_enable_title">High Touch Polling Rate</string>
    <string name="htsr_enable_summary">Increases touch polling rate to decrease latency</string>

    <!-- Audio -->
    <string name="audio_category">Audio</string>
    
    <!-- Audio - Clear Speaker -->
    <string name="clear_speaker_title">Clear speaker</string>
    <string name="clear_speaker_summary">Play a 30-second audio to clear the speaker</string>
    <string name="clear_speaker_description">Run this feature once or twice if you find that your speaker is lightly blocked by dust. Set media volume to maximum.\n\nIf the speaker is blocked heavily, run this feature 2-5 times while shaking your device with the speaker facing downwards.</string>

    <!-- Audio - Dirac settings -->
    <string name="dirac_summary">Optimize audio quality</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">Default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong press to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- CustomSeekBarPreference -->
    <string name="edit_value">Choose new Value</string>
    <string name="default_value">Default Value</string>
    <string name="edit_hint">Value between %1$d and %2$d</string>

    <!-- Thermal Profiles -->
    <string name="thermal_category">Thermal</string> 
    <string name="thermal_title">Thermal Profiles and Game Mode</string>
    <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>

    <!-- USB 2.0 Force FastCharge -->
    <string name="usb_title">USB</string> 
    <string name="usb2_fc_title">USB 2.0 Fast Charge</string>
    <string name="usb2_fc_summary">Force fast charging of up to 900mA in USB 2.0 mode</string>

    <!-- Haptic Level Settings -->
    <string name="vibrator_category">Vibrator</string>
    <string name="haptic_title">Haptic feedback</string>
    <string name="haptic_level_title">Feedback strength level</string>
    <string name="haptic_level_summary">Adjust the strength level of overall haptic feedback</string>
</resources>
