<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2018 The Asus-SDM660 Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="display"
        android:layout="@layout/pref_cat"
        app:allowDividerAbove="false"
        android:title="@string/display_title">

        <Preference
            android:layout="@layout/octavi_preference"
            android:key="htsr_enable"
            android:title="@string/htsr_enable_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.touchsampling.TouchSamplingSettingsActivity" />
        </Preference>

     <SwitchPreference
        android:key="fps_info"
        android:layout="@layout/octavi_preference"
        android:title="@string/fps_info_title"
        android:summary="@string/fps_info_summary"
        android:persistent="true" />

      <ListPreference
            android:key="fps_info_position"
            android:defaultValue="0"
            android:title="@string/fps_info_position_title"
            android:summary="%s"
            android:entries="@array/fps_info_position_entries"
            android:entryValues="@array/fps_info_position_values" />

        <ListPreference
            android:key="fps_info_color"
            android:defaultValue="0"
            android:title="@string/fps_info_color_title"
            android:summary="%s"
            android:entries="@array/fps_info_color_entries"
            android:entryValues="@array/fps_info_color_values" />

        <com.xiaomi.parts.preferences.SecureSettingSeekBarPreference
            android:key="fps_info_text_size"
            android:title="@string/fps_info_text_size_title"
            android:persistent="true"
            android:max="5"
            android:min="1"
            app:units=""
            android:defaultValue="3" />

        <Preference
            android:key="device_doze"
            android:persistent="false"
            android:summary="@string/advanced_doze_summary"
            android:title="@string/ambient_display_xiaomi"
            android:layout="@layout/octavi_preference">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.doze.DozeSettingsActivity"
                android:targetPackage="org.lineageos.settings.doze" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio"
        app:allowDividerAbove="false"
        android:layout="@layout/pref_cat"
        android:title="@string/audio_category">

        <Preference
            android:summary="@string/dirac_summary"
            android:layout="@layout/octavi_preference"
            android:key="dirac_enabled"
            android:title="Poco Dirac">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.xiaomi.dirac"
                android:targetClass="com.xiaomi.dirac.DiracActivity" />
        </Preference>

        <Preference
            android:key="clear_speaker_settings" 
            android:title="@string/clear_speaker_title"
            android:layout="@layout/octavi_preference" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.parts.speaker.ClearSpeakerActivity"
                android:targetPackage="com.xiaomi.parts.speaker" />
        </Preference>
      </PreferenceCategory>

        <PreferenceCategory
            android:key="thermal_settings"
            app:allowDividerAbove="false"
            android:layout="@layout/pref_cat"
            android:title="@string/thermal_category">
      
      <Preference
            android:layout="@layout/octavi_preference"
            android:key="thermal_profiles"
            android:summary="@string/thermal_summary"
            android:title="@string/thermal_title">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.lineageos.settings"
                android:targetClass="org.lineageos.settings.thermal.ThermalActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="usb"
        app:allowDividerAbove="false"
        android:layout="@layout/pref_cat"
        android:title="@string/usb_title">

        <SwitchPreference
            android:key="usb2_fast_charge"
            android:layout="@layout/octavi_preference"
            android:summary="@string/usb2_fc_summary"
            android:title="@string/usb2_fc_title" />
    </PreferenceCategory>

    
    <PreferenceCategory
        android:key="vibrator"
        app:allowDividerAbove="false"
        android:layout="@layout/pref_cat"
        android:title="@string/vibrator_category">

    <Preference
            android:key="vibrator_control"
            android:title="@string/haptic_level_title"
            android:summary="@string/haptic_level_summary"
            android:layout="@layout/octavi_preference">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="org.lineageos.settings.haptic.HapticLevelActivity"
                android:targetPackage="org.lineageos.settings" />
        </Preference>
     </PreferenceCategory>

</PreferenceScreen>
